# financial-document-intelligence-agent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  sonar-project.properties
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
.husky/: pre-commit
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: extract.py  ingest.py  query.py
backend/app/models/: document.py  financial.py
backend/app/services/: embedder.py  extractor.py  pdf_processor.py  rag_pipeline.py  vector_store.py
backend/tests/: conftest.py  test_api.py  test_config.py  test_embedder.py  test_extractor.py  test_models.py  test_pdf_processor.py  test_rag_pipeline.py  test_vector_store.py
docs/plans/: 2026-02-23-financial-document-intelligence-design.md  2026-02-23-implementation-plan.md
frontend/: Dockerfile  package-lock.json  package.json  railway.toml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/extract/: route.ts
frontend/src/app/api/ingest/: route.ts
frontend/src/app/api/query/: route.ts
frontend/src/components/: CitationCard.tsx  DocumentSidebar.tsx  Footer.tsx  MetricsDashboard.tsx  QueryInterface.tsx  UploadZone.tsx
frontend/src/hooks/: useDocuments.ts
frontend/src/lib/: api.ts  types.ts
